<resources>
    <string name="app_name">Monecole</string>
    <string name="connexion_etudiant">Connexion Etudiant</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="logo_cole">Logo École</string>
    <string name="gestion_cole_primaire">Gestion École Primaire</string>
    <string name="application_mobile_compl_te_pour_g_rer_les_l_ves_enseignants_notes_et_absences_de_mani_re_efficace_et_moderne">Application mobile complète pour gérer les élèves, enseignants, notes et absences de manière efficace et moderne.</string>
    <string name="_250">250</string>
    <string name="l_ves">Élèves</string>
    <string name="_15">15</string>
    <string name="enseignants">Enseignants</string>
    <string name="_8">8</string>
    <string name="commencer_l_exp_rience">Commencer l\'Expérience</string>
    <string name="classes">Classes</string>
    <string name="version_1_0_cole_primaire_excellence">Version 1.0 • École Primaire Excellence</string>
    <string name="logo_cole2">Logo École</string>
    <string name="cole_primaire_excellence">École Primaire Excellence</string>
    <string name="duquer_inspirer_r_ussir">Éduquer, Inspirer, Réussir</string>
    <string name="informations_de_l_cole">Informations de l\'École</string>
    <string name="classes2">Classes</string>
    <string name="_12_">12</string>
    <string name="enseignants_">Enseignants</string>
    <string name="_18_">18</string>
    <string name="phone_">Phone</string>
    <string name="_33_1_23_45_67_89_">+33 1 23 45 67 89</string>
    <string name="l_ves_">Élèves</string>
    <string name="__285">285</string>
    <string name="acc_der_mon_espace_">Accéder à mon espace</string>
    <string name="enseignant_">Enseignant</string>
    <string name="choisir_votre_profil_">Choisir votre profil</string>
    <string name="location_">Location</string>
    <string name="enseignant__">Enseignant</string>
    <string name="_acc_der_mon_espace">Accéder à mon espace</string>
    <string name="voir_sur_la_carte__">Voir sur la carte</string>
    <string name="contact_ecole_excellence_fr__">contact@ecole-excellence.fr</string>
    <string name="tudiant__">Étudiant</string>
    <string name="tudiant____">Étudiant</string>
    <string name="email____">Email</string>
    <string name="____">123 Rue de l\'Éducation, 75000 Paris</string>
    <string name="NoteHead">Saisir Note</string>
    <string name = "EntrerNote">Donner la note</string>
    <string name = "AffNote">Affichage Note</string>
</resources>